--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
+    <meta property="og:site_name" content="Looksy">
+    <title>Focus, Look closely...</title>
+    <meta property="og:title" content="Looksy v2.3.1">
     <meta name="description" content="Looksy - Modded Witness">
+    <meta property="og:description" content="Modded Witness">
+    <meta property="og:type" content="Game">
+    <meta property="og:url" content="prodzpod.github.io/witness">
+    <link rel="icon" type="image/png" href="./data/favicon.png">
+    <meta property="og:image" content="./data/favicon_black.png">
     <meta name="author" content="prod">
-    <meta name="robots" content="nosnippet"/>
+    <meta name="robots" content="nosnippet" />
     <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
     <link rel="stylesheet" type="text/css" href="./data/style.css" id="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" ie-ignore>
-    <link rel="icon" type="image/png" href="./data/favicon.png">
     <script type="text/javascript" src="./engine/utilities.js"></script>
     <script type="text/javascript" src="./engine/svg.js"></script>
     <script async type="text/javascript" src="./engine/puzzle.js"></script>
@@ -17,7 +24,6 @@
     <script async type="text/javascript" src="./engine/display2.js"></script>
     <script async type="text/javascript" src="./engine/trace2.js"></script>
     <script async type="text/javascript" src="./index.js"></script>
-    <title>Focus, Look closely...</title>
   </head>
   <body>
     <div class="wrapper">
@@ -57,7 +63,13 @@
                 </div>
               </div>
             </div>
-            <button onpointerdown="resetProgress()">Reset Progress</button>
+            <div class="resetButtons hlist" style="width: 100%">
+              <div class="spacer"></div>
+              <button id="softReset" onpointerdown="toggleReset()">Clear Cache</button>
+              <div class="spacer"></div>
+              <button id="hardReset" onpointerdown="toggleReset(true)">Reset Progress</button>
+              <div class="spacer"></div>
+            </div>
             <div class="spacer"></div>
         </div>
       </div>
