--- a/merge.html
+++ b/merge.html
@@ -1,13 +1,20 @@
 <html xmlns="http://www.w3.org/2000/xhtml">
   <head>
     <meta charset="utf-8">
+    <meta property="og:site_name" content="Looksy">
+    <title>Looksy Merger</title>
+    <meta property="og:title" content="Looksy Merger v2.3.1">
     <meta name="description" content="Looksy - Modded Witness Editor">
+    <meta property="og:description" content="Modded Witness Editor">
+    <meta property="og:type" content="Game">
+    <meta property="og:url" content="prodzpod.github.io/witness/merge">
+    <link rel="icon" type="image/png" href="./data/favicon.png">
+    <meta property="og:image" content="./data/favicon_black.png">
     <meta name="author" content="prod">
-    <meta name="robots" content="nosnippet"/>
+    <meta name="robots" content="nosnippet" />
     <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
     <link rel="stylesheet" type="text/css" href="./data/style.css" id="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css" ie-ignore>
-    <link rel="icon" type="image/png" href="./data/favicon.png">
     <script type="text/javascript" src="./engine/utilities.js"></script>
     <script type="text/javascript" src="./engine/svg.js"></script>
     <script async type="text/javascript" src="./engine/puzzle.js"></script>
@@ -17,7 +24,6 @@
     <script async type="text/javascript" src="./engine/display2.js"></script>
     <script async type="text/javascript" src="./engine/trace2.js"></script>
     <script async type="text/javascript" src="./merge.js"></script>
-    <title>Looksy Merger</title>
   </head>
   <body>
     <div class="wrapper">
