--- a/play.html
+++ b/play.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="Game">
     <meta property="og:url" content="prodzpod.github.io/witness">
     <link rel="icon" type="image/png" href="./data/favicon.png">
-    <meta property="og:image" content="./data/favicon_black.png">
+    <meta property="og:image" content="https://prodzpod.github.io/witness/data/favicon_black.png">
     <meta name="author" content="prod">
     <meta name="robots" content="nosnippet" />
     <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
