fix: rgba legacy puzzle versions

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script async type="text/javascript" src="./index.js"></script>
   </head>
   <body>
+    <div class="background"></div>
     <div class="wrapper">
       <div class="hlist">
         <div class="spacer"></div>
