--- a/play.html
+++ b/play.html
@@ -26,6 +26,7 @@
     <script async type="text/javascript" src="./play.js"></script>
   </head>
   <body class="playfield">
+    <div class="background"></div>
     <div class="wrapper">
       <div class="hlist">
         <div class="spacer"></div>
