--- a/editor.html
+++ b/editor.html
@@ -253,7 +253,7 @@
                   <td><button id="pokerchip"></button></td>
                   <td><button id="swirl"></button></td>
                   <td><button id="crystal"></button></td>
-                  <td><button id="none"></button></td>
+                  <td><button id="drop"></button></td>
                   <td><button id="none"></button></td>
                   <td><button id="none"></button></td>
                 </tr>
