fix: jerry's mandering

--- a/editor.html
+++ b/editor.html
@@ -196,7 +196,7 @@
                 </div>
                 <div class="hlist">
                   <div onpointerdown="applyChange('makeJerrymandering', null, 'jerrymandering')" class="checkbox" id="makeJerrymandering"></div>
-                  <label onpointerdown="applyChange('makeJerrymandering', null, 'jerrymandering')" style="margin-right: 8px">Jerrymandering</label>
+                  <label onpointerdown="applyChange('makeJerrymandering', null, 'jerrymandering')" style="margin-right: 8px"><a title="It's like Gerrymandering, but for Witness">Jerrymandering</a></label>
                   <div class="spacer"></div>
                 </div>
               </div>
