--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="Game">
   <meta property="og:url" content="witness.zacharytalis.com/">
   <link rel="icon" type="image/png" href="./data/favicon.png">
-  <meta property="og:image" content="https://witness.zacharytalis.com//data/favicon_black.png">
+  <meta property="og:image" content="https://witness.zacharytalis.com/data/favicon_black.png">
   <meta name="author" content="prod">
   <meta name="robots" content="nosnippet" />
   <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
