--- a/merge.html
+++ b/merge.html
@@ -8,9 +8,9 @@
   <meta name="description" content="Looksy - Modded Witness Editor">
   <meta property="og:description" content="Modded Witness Editor">
   <meta property="og:type" content="Game">
-  <meta property="og:url" content="witness.zacharytalis.com//merge">
+  <meta property="og:url" content="witness.zacharytalis.com/merge">
   <link rel="icon" type="image/png" href="./data/favicon.png">
-  <meta property="og:image" content="https://witness.zacharytalis.com//data/favicon_black.png">
+  <meta property="og:image" content="https://witness.zacharytalis.com/data/favicon_black.png">
   <meta name="author" content="prod">
   <meta name="robots" content="nosnippet" />
   <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
