--- a/editor.html
+++ b/editor.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Looksy - Modded Witness Editor">
   <meta property="og:description" content="Modded Witness Editor">
   <meta property="og:type" content="Game">
-  <meta property="og:url" content="witness.zacharytalis.com/editor">
+  <meta property="og:url" content="witness.zacharytalis.com/editor.html">
   <link rel="icon" type="image/png" href="./data/favicon.png">
   <meta property="og:image" content="https://witness.zacharytalis.com/data/favicon_black.png">
   <meta name="author" content="prod">
