--- a/play.html
+++ b/play.html
@@ -8,9 +8,9 @@
   <meta name="description" content="Looksy - Modded Witness">
   <meta property="og:description" content="Modded Witness">
   <meta property="og:type" content="Game">
-  <meta property="og:url" content="witness.zacharytalis.com/">
-  <link rel="icon" type="image/png" href="./data/favicon.png">
-  <meta property="og:image" content="https://witness.zacharytalis.com/data/favicon_black.png">
+  <meta property="og:url" class="changecontent" content="%%NAME%%/play.html">
+  <link rel="icon" type="image/png" class="changehref" href="%%NAME%%/data/favicon.png">
+  <meta property="og:image" class="changecontent" content="%%NAME%%/data/favicon_black.png">
   <meta name="author" content="prod">
   <meta name="robots" content="nosnippet" />
   <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
