--- a/merge.html
+++ b/merge.html
@@ -8,9 +8,9 @@
   <meta name="description" content="Looksy - Modded Witness Editor">
   <meta property="og:description" content="Modded Witness Editor">
   <meta property="og:type" content="Game">
-  <meta property="og:url" class="changecontent" content="%%NAME%%/merge.html">
+  <meta property="og:url" content="prodzpod.github.io/witness/merge.html">
   <link rel="icon" type="image/png" class="changehref" href="%%NAME%%/data/favicon.png">
-  <meta property="og:image" class="changecontent" content="%%NAME%%/data/favicon_black.png">
+  <meta property="og:image" content="prodzpod.github.io/witness/data/favicon_black.png">
   <meta name="author" content="prod">
   <meta name="robots" content="nosnippet" />
   <link rel="stylesheet" type="text/css" href="./data/reset.css" id="stylesheet">
